# learn-mlflow

./: .gitignore  README.md  pyproject.toml
notebook/: catencoder.ipynb  mlflow-optuna.ipynb  mlflow-tracking.ipynb  optuna.ipynb
notebook/model/: serve.ipynb  train.ipynb
notebook/optuna/: MARP.md  README.md  mlflow-optuna.ipynb  mlflow-tracking.ipynb  optuna.ipynb
